Page MenuHome GnuPG

No hard lockup when SCardConnect never returns
Testing, HighPublic

Description

Even in a (some sort of) fatal situation where SCardConnect never returns, it is better to scdaemon still works somehow.

This could be done if the feature ( T7401: PC/SC: Cancel SCardConnect with timeout) is implemented.

Before T7401 done, still, it would be possible only the connection which requests SCardConnect stops, but scdaemon itself still no hard lockup entirely.

Event Timeline

gniibe created this task.
gniibe changed the task status from Open to Testing.Mon, Nov 18, 6:30 AM

In select_application function, we can minimize the holding W-lock.

Still, scanning the card reader list should be serialized, it's not needed keep holding the lock in the whole process.

A change is applied by: rG261a08566e38: scd: No hard lock-up when apdu_connect never returns.